--- a/Winnebago/wifiutil.settings.plist
+++ b/Winnebago/wifiutil.settings.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>orgName</key>
-	<string>Nike</string>
+	<string>Company</string>
 	<key>networkRemoveList</key>
 	<array/>
 	<key>networkAddList</key>
